Atualização pós resenha NK

--- a/Conferences/Escola_AKB_2020.org
+++ b/Conferences/Escola_AKB_2020.org
@@ -49,3 +49,49 @@ $$
 
 - Mudanças na desigualdade salarial alteram a inclinação da curva de poupança/investimento
   + Pode se tornar mais wage-/profit-led
+
+*** 
+
+* Estagnação Secular: Teorias e Políticas
+
+** Keynes e as possibilidades econômicas para os nossos netos
+
+- Abandona o Malthusianismo
+- Argumenta que a produtividade vai crescer muito
+- Chama atenção para o período do desemprego tecnológico
+  + Mas é otimista quanto a superação em algumas décadas
+- Discute implicações sociais desta superação
+  + Tempo livre
+  + Fim de necessidades de consumo relativo
+  + Fim da busca do dinheiro pelo dinheiro
+
+*** Tese da pobreza dentro da abundância
+
+- Falta de demanda efetiva pode levar o emprego efetivo para longe do pleno-emprego
+- Sociedades ricas tem um problema: investimentos são menos interessantes ao menos que a taxa de juros caia em um nível muito rápida
+  + Alternativas:
+    - reduzir a propensão marginal a poupar via mudanças distributivas
+    - Capital deeping
+
+*** Origem da tese da estagnação secular: Keynes (1937)
+
+- Redução da população 
+- Investimento é prejudicado por
+  + Baixo crescimento da produtividade
+  + Baixo crescimento da população
+  + Progresso técnico poupador de capital
+  + Dificuldade para reduzir suficientemente a taxa de juros (Eutanásia do rentista)
+  + Hansen (1939) adapta ao caso dos EUA e adiciona o fim da expansão territorial
+- Keynes critia a ideia do oversaving 
+  + Teoria incompleta: não existe uma teoria alternativa da taxa de juros
+    - Relação inversa de longo prazo entre juros e investimento
+
+Forte ambiguidade de investimento baixo por excesso potencial de capital em relação à oferta de trabalho ou em relação ao tamando do mercado?
+- Se for em relação ao tamanho do mercado, por que o aumento da população e da produtividade aumentaria o tamanho de mercado?
+- Se for em relação a força de trabalho, o argumento é contraditório dada uma função de produção neoclássica.
+
+** Mudança na distribuição de renda
+
+- Aumento dos lucros anormais e relação com diferencial de renda rural e urbana
+- q de Tobin (Bolsa) vira custo de oportunidade do capital
+- Financeirização tem mais relação com a distribuição do que com o investimento produtivo
