--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-24 ter 19:00
+% Created 2020-11-24 ter 21:02
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,114 +38,8 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:orgd14089e}
+\label{sec:org2f44710}
 
-\begin{center}
-\begin{longtable}{lr}
-\caption{Notas das resenhas - Monetaristas}\\
-\toprule
-{} &  Resenha Monetaristas \\
-\textbf{RA    } &                       \\
-\midrule
-\endhead
-\midrule
-\multicolumn{2}{r}{{Continued on next page}} \\
-\midrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-\textbf{230645} &                  50.0 \\
-\textbf{213549} &                  30.0 \\
-\textbf{257748} &                  50.0 \\
-\textbf{232568} &                  70.0 \\
-\textbf{233566} &                  30.0 \\
-\textbf{215626} &                   0.0 \\
-\textbf{91108 } &                     - \\
-\textbf{234311} &                  50.0 \\
-\textbf{216397} &                  30.0 \\
-\textbf{197474} &                  50.0 \\
-\textbf{234982} &                   0.0 \\
-\textbf{235042} &                   0.0 \\
-\textbf{197724} &                  50.0 \\
-\textbf{217350} &                  30.0 \\
-\textbf{174154} &                  30.0 \\
-\textbf{237534} &                  30.0 \\
-\textbf{237856} &                  50.0 \\
-\textbf{199967} &                  70.0 \\
-\textbf{103034} &                  50.0 \\
-\textbf{172577} &                  50.0 \\
-\textbf{159866} &                  50.0 \\
-\textbf{221896} &                  70.0 \\
-\textbf{257876} &                 100.0 \\
-\textbf{242087} &                   0.0 \\
-\textbf{242328} &                  50.0 \\
-\textbf{147614} &                   0.0 \\
-\textbf{176104} &                   0.0 \\
-\textbf{205149} &                 100.0 \\
-\textbf{205151} &                   0.0 \\
-\textbf{244207} &                  70.0 \\
-\textbf{158425} &                  50.0 \\
-\textbf{257932} &                 100.0 \\
-\textbf{177964} &                  70.0 \\
-\textbf{245099} &                  50.0 \\
-\textbf{206806} &                  50.0 \\
-\textbf{225851} &                  50.0 \\
-\end{longtable}
-\end{center}
-\begin{center}
-\begin{longtable}{lr}
-\caption{Notas das resenhas - Monetaristas}\\
-\toprule
-{} &  Resenha Monetaristas \\
-\textbf{RA    } &                       \\
-\midrule
-\endhead
-\midrule
-\multicolumn{2}{r}{{Continued on next page}} \\
-\midrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-\textbf{230645} &                  50.0 \\
-\textbf{213549} &                  30.0 \\
-\textbf{257748} &                  50.0 \\
-\textbf{232568} &                  70.0 \\
-\textbf{233566} &                  30.0 \\
-\textbf{215626} &                   0.0 \\
-\textbf{91108 } &                     - \\
-\textbf{234311} &                  50.0 \\
-\textbf{216397} &                  30.0 \\
-\textbf{197474} &                  50.0 \\
-\textbf{234982} &                   0.0 \\
-\textbf{235042} &                   0.0 \\
-\textbf{197724} &                  50.0 \\
-\textbf{217350} &                  30.0 \\
-\textbf{174154} &                  30.0 \\
-\textbf{237534} &                  30.0 \\
-\textbf{237856} &                  50.0 \\
-\textbf{199967} &                  70.0 \\
-\textbf{103034} &                  50.0 \\
-\textbf{172577} &                  50.0 \\
-\textbf{159866} &                  50.0 \\
-\textbf{221896} &                  70.0 \\
-\textbf{257876} &                 100.0 \\
-\textbf{242087} &                   0.0 \\
-\textbf{242328} &                  50.0 \\
-\textbf{147614} &                   0.0 \\
-\textbf{176104} &                   0.0 \\
-\textbf{205149} &                 100.0 \\
-\textbf{205151} &                   0.0 \\
-\textbf{244207} &                  70.0 \\
-\textbf{158425} &                  50.0 \\
-\textbf{257932} &                 100.0 \\
-\textbf{177964} &                  70.0 \\
-\textbf{245099} &                  50.0 \\
-\textbf{206806} &                  50.0 \\
-\textbf{225851} &                  50.0 \\
-\end{longtable}
-\end{center}
 \begin{center}
 \begin{longtable}{lr}
 \caption{Notas das resenhas - Monetaristas}\\
@@ -204,38 +98,21 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 
 \subsection{Notas}
-\label{sec:orgb9bce56}
+\label{sec:orgb591039}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
-\end{center}
-
 
 
 \subsection{Notas e presença}
-\label{sec:org7795778}
+\label{sec:org936dea6}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
-\end{center}
-
 
 \section{Novos Clássicos}
-\label{sec:org6e19a0e}
+\label{sec:orgc9efab5}
 
 \begin{itemize}
 \item[{$\square$}] Computar notas Forms
@@ -294,140 +171,23 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \textbf{225851} &                      0.0 \\
 \end{longtable}
 \end{center}
-\begin{center}
-\begin{longtable}{lr}
-\caption{Notas das resenhas - Novos Clássicos}\\
-\toprule
-{} &  Resenha Novos Clássicos \\
-\textbf{RA    } &                          \\
-\midrule
-\endhead
-\midrule
-\multicolumn{2}{r}{{Continued on next page}} \\
-\midrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-\textbf{230645} &                      5.0 \\
-\textbf{213549} &                      5.0 \\
-\textbf{257748} &                      7.0 \\
-\textbf{232568} &                      5.0 \\
-\textbf{233566} &                      7.0 \\
-\textbf{215626} &                      0.0 \\
-\textbf{91108 } &                        - \\
-\textbf{234311} &                      5.0 \\
-\textbf{216397} &                      0.0 \\
-\textbf{197474} &                      5.0 \\
-\textbf{234982} &                      0.0 \\
-\textbf{235042} &                      0.0 \\
-\textbf{197724} &                      5.0 \\
-\textbf{217350} &                      0.0 \\
-\textbf{174154} &                      0.0 \\
-\textbf{237534} &                      3.0 \\
-\textbf{237856} &                      5.0 \\
-\textbf{199967} &                      7.0 \\
-\textbf{103034} &                      5.0 \\
-\textbf{172577} &                      7.0 \\
-\textbf{159866} &                      5.0 \\
-\textbf{221896} &                     10.0 \\
-\textbf{257876} &                     10.0 \\
-\textbf{242087} &                        - \\
-\textbf{242328} &                      7.0 \\
-\textbf{147614} &                      0.0 \\
-\textbf{176104} &                        - \\
-\textbf{205149} &                      0.0 \\
-\textbf{205151} &                      7.0 \\
-\textbf{244207} &                      7.0 \\
-\textbf{158425} &                      7.0 \\
-\textbf{257932} &                      7.0 \\
-\textbf{177964} &                      5.0 \\
-\textbf{245099} &                      7.0 \\
-\textbf{206806} &                      0.0 \\
-\textbf{225851} &                      0.0 \\
-\end{longtable}
-\end{center}
-\begin{center}
-\begin{longtable}{lr}
-\caption{Notas das resenhas - Novos Clássicos}\\
-\toprule
-{} &  Resenha Novos Clássicos \\
-\textbf{RA    } &                          \\
-\midrule
-\endhead
-\midrule
-\multicolumn{2}{r}{{Continued on next page}} \\
-\midrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-\textbf{230645} &                      5.0 \\
-\textbf{213549} &                      5.0 \\
-\textbf{257748} &                      7.0 \\
-\textbf{232568} &                      5.0 \\
-\textbf{233566} &                      7.0 \\
-\textbf{215626} &                      0.0 \\
-\textbf{91108 } &                        - \\
-\textbf{234311} &                      5.0 \\
-\textbf{216397} &                      0.0 \\
-\textbf{197474} &                      5.0 \\
-\textbf{234982} &                      0.0 \\
-\textbf{235042} &                      0.0 \\
-\textbf{197724} &                      5.0 \\
-\textbf{217350} &                      0.0 \\
-\textbf{174154} &                      0.0 \\
-\textbf{237534} &                      3.0 \\
-\textbf{237856} &                      5.0 \\
-\textbf{199967} &                      7.0 \\
-\textbf{103034} &                      5.0 \\
-\textbf{172577} &                      7.0 \\
-\textbf{159866} &                      5.0 \\
-\textbf{221896} &                     10.0 \\
-\textbf{257876} &                     10.0 \\
-\textbf{242087} &                        - \\
-\textbf{242328} &                      7.0 \\
-\textbf{147614} &                      0.0 \\
-\textbf{176104} &                        - \\
-\textbf{205149} &                      0.0 \\
-\textbf{205151} &                      7.0 \\
-\textbf{244207} &                      7.0 \\
-\textbf{158425} &                      7.0 \\
-\textbf{257932} &                      7.0 \\
-\textbf{177964} &                      5.0 \\
-\textbf{245099} &                      7.0 \\
-\textbf{206806} &                      0.0 \\
-\textbf{225851} &                      0.0 \\
-\end{longtable}
-\end{center}
 \subsection{Notas}
-\label{sec:orgb2114a1}
+\label{sec:org2e3df8d}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
 \end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
-\end{center}
+
 
 
 \subsection{Notas e Presença}
-\label{sec:org35d5dcd}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
-\end{center}
+\label{sec:orge1d5154}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:org2a61c9f}
+\label{sec:org7b88f0a}
 \subsubsection{Sorteio}
-\label{sec:org036dcd0}
+\label{sec:orga9ecfa5}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["216397", "235042"]
@@ -495,7 +255,7 @@ resultado
 
 
 \subsubsection{Resultado Turnitin \textit{<2020-11-14 sáb>}}
-\label{sec:org4eacc30}
+\label{sec:org996d650}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -523,40 +283,22 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:orgc2247b5}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
-\end{center}
+\label{sec:orgc601f4c}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
 
 \item Atualizando notas
-\label{sec:org005f6ba}
+\label{sec:orgde9ceea}
 \end{enumerate}
 
 \subsection{Questões}
-\label{sec:orgdfa711d}
+\label{sec:org1ab3ad0}
 
 
 
 \subsubsection{Importando pacotes e funções}
-\label{sec:org4001b6c}
+\label{sec:org59dbe40}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
@@ -573,7 +315,7 @@ RA & Grau de semelhança\\
 
 
 \section{Novos Keynesianos}
-\label{sec:orge240eed}
+\label{sec:orgd382fb3}
 
 \begin{itemize}
 \item[{$\boxtimes$}] Computar notas
@@ -634,28 +376,27 @@ RA & Grau de semelhança\\
 \end{longtable}
 \end{center}
 \subsection{Notas}
-\label{sec:org164f97e}
+\label{sec:org00827a5}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novoskeynesianos.png}
 \end{center}
 
 
 
-
 \subsection{Notas e Presença}
-\label{sec:orge143be9}
+\label{sec:org8c539d3}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novoskeynesianos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:org6c5bf76}
+\label{sec:orgc6c723c}
 \subsubsection{Sorteio}
-\label{sec:orgf20944c}
+\label{sec:org7fbbc3f}
 
 Como foram entregues aproximadamente 30\% de resenhas, todos os alunos foram submetidos ao turnitin.
 
 \subsubsection{Resultado Turnitin}
-\label{sec:org522fdcc}
+\label{sec:org51d48ef}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvK}Resumo relatório de origilidadade}
@@ -682,10 +423,7 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:orgbcb0822}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/turintin_NvK_fig.png}
-\end{center}
+\label{sec:org73bb18f}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvK_fig.png}
 \end{center}
@@ -693,11 +431,11 @@ RA & Grau de semelhança\\
 
 
 \item Atualização das notas
-\label{sec:org738e4d6}
+\label{sec:org82e9e80}
 \end{enumerate}
 
 \section{Lista de presença e notas}
-\label{sec:orge216533}
+\label{sec:org12240dc}
 \begin{center}\begin{landscape}
 \small
 \setlength\LTleft{0pt}
@@ -756,13 +494,10 @@ RA & Grau de semelhança\\
 \end{landscape}\end{center}
 
 
-
-
-
 \section{Seminários}
-\label{sec:org0b98e41}
+\label{sec:orgd54b7cd}
 \subsection{Sorteio}
-\label{sec:orgd68eba8}
+\label{sec:org5816f9c}
 \begin{table}
 \centering
 \caption{Resultado sorteio das atas - Seminários}
@@ -786,54 +521,8 @@ Grupo 12 &     Ata 3 \\
 \bottomrule
 \end{tabular}
 \end{table}
-\begin{table}
-\centering
-\caption{Resultado sorteio das atas - Seminários}
-\begin{tabular}{ll}
-\toprule
-{} & Resultado \\
-Grupos   &           \\
-\midrule
-Grupo 1  &     Ata 6 \\
-Grupo 2  &     Ata 3 \\
-Grupo 3  &    Ata 10 \\
-Grupo 4  &    Ata 12 \\
-Grupo 5  &     Ata 8 \\
-Grupo 6  &    Ata 11 \\
-Grupo 7  &     Ata 5 \\
-Grupo 8  &     Ata 1 \\
-Grupo 9  &     Ata 2 \\
-Grupo 10 &     Ata 9 \\
-Grupo 11 &     Ata 7 \\
-Grupo 12 &     Ata 4 \\
-\bottomrule
-\end{tabular}
-\end{table}
-\begin{table}
-\centering
-\caption{Resultado sorteio das atas - Seminários}
-\begin{tabular}{ll}
-\toprule
-{} & Resultado \\
-Grupos   &           \\
-\midrule
-Grupo 1  &     Ata 6 \\
-Grupo 2  &     Ata 3 \\
-Grupo 3  &    Ata 10 \\
-Grupo 4  &    Ata 12 \\
-Grupo 5  &     Ata 8 \\
-Grupo 6  &    Ata 11 \\
-Grupo 7  &     Ata 5 \\
-Grupo 8  &     Ata 1 \\
-Grupo 9  &     Ata 2 \\
-Grupo 10 &     Ata 9 \\
-Grupo 11 &     Ata 7 \\
-Grupo 12 &     Ata 4 \\
-\bottomrule
-\end{tabular}
-\end{table}
 
 
 \subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituição}
-\label{sec:orgf1fa6fb}
+\label{sec:orgd5c74b8}
 \end{document}
