--- a/Reviews/ROPE/2020_63/2020_63_AfterReview.tex
+++ b/Reviews/ROPE/2020_63/2020_63_AfterReview.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-20 sex 18:55
+% Created 2020-11-25 qua 18:56
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -40,39 +40,38 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 
 \begin{abstract}
-As mentioned before, the manuscript contributes to the empirical housing-related literature and reports interesting results based on quite  new methodology.
+As mentioned before, the manuscript contributes to the empirical housing-related literature and reports interesting results based on new method.
 The authors properly adapted the manuscript as suggested.
 However, there are some structural flaws and redundancies therefore my recommendation is to \textbf{approve} the manuscript with minor \textbf{revisions}.
 The following topics are on this direction.
 \end{abstract}
 
 \begin{enumerate}
-\item The new abstract is clearer and more accurate than the previous version.
-\item Some paragraphs in the Introduction (Section 1) seems to be more adequate in Section 3 and presents some redundancies.
+\item Some paragraphs in the Introduction (Section 1) seem to be more adequate in Section 3 and present some redundancies.
 \begin{itemize}
-\item This is the case in paragraph 1, page 2 which is quite similar with paragraph 1 page 8.
+\item This is the case in paragraph 1, page 2 which is  similar to paragraph 1 page 8.
 \item Since the theoretical model will be presented in section 3, I suggest discussing Luxemburg-Kalecki External Market without going into too much detail in the Sraffian supermultiplier model.
 \end{itemize}
-\item Empirical literature review (Section 2) is better organized
+\item Empirical literature review (Section 2) is better organized.
 \begin{itemize}
-\item A suggestion is to present the review in a table. In doing this, it is possible to highlight the empirical, methodological and theoretical gap
-\item X-axis in Figure 1 (page 2) is not in standard datetime (month/day/year) format.
+\item A suggestion is to present the review in a table in order to highlight the empirical, methodological and theoretical gap
+\item X-axis in Figure 1 (page 2) is not in standard date (month/day/year) format.
 \item There are different citation entries for the same paper (Huang et al 2018 and Huang et al 2020).
-\item Time span selection and consumer credit exclusion are more explicit now
+\item Time span selection and consumer credit exclusion are more explicit now.
 \begin{itemize}
-\item Additionally, I would suggest to explicitly indicate FRED data series code instead of pointing that all the data was retrieved from FRED database.
+\item Additionally, I would suggest indicating FRED data series code instead of pointing that all the data was retrieved from FRED database.
 \end{itemize}
 \item Table 1 does not have a proper caption. It is not clear that variables are in log. Maybe changing ``(see Table 1 for the summary statistics of them)'' to the end of the paragraph is enough.
 \end{itemize}
-\item Methodology presentation (Section 4, mainly 4.4) is clearer than previous version
+\item Methodology presentation (Section 4, mainly 4.4) is clearer than the previous version.
 \begin{itemize}
 \item Section 4.2 is unnecessary. The reference to Table 2 in Section 5 (page 16) seems to be enough.
 \begin{itemize}
-\item It is worth noting that moving part of methodology discussion to the appendix has improved the reading
+\item It is worth noting that moving part of methodological discussion to the appendix has improved the reading.
 \end{itemize}
 \end{itemize}
-\item In Section 5, after pointing out the differences with existing empirical literature, it would be interesting to compare with Huang et al. (2020) conclusion in more detail in order to highlight the theoretical divergences since it is argued that they report that (p. 5) ``housing factors [\ldots{}]   autonomously drive the business cycle in the US''
+\item In Section 5, after pointing out the differences with existing empirical literature, it would be interesting to compare with Huang et al. (2020) conclusion in more detail in order to highlight the theoretical divergences since they report that (p. 5) ``housing factors [\ldots{}]   autonomously drive the business cycle in the US''.
 \end{enumerate}
 
-\noindent Considering the items discussed above, I recommend to \textbf{approve} the manuscript \textbf{with minor revisions}.
+\noindent Considering the items discussed above, I recommend  \textbf{approving} the manuscript \textbf{with minor revisions}.
 \end{document}
